--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ lib_name = hola_nbdev
 
 copyright = openthings
 
-user = arlingvazquez
+user = arlingva
 description = Tutorial de nbdev
 # keywords = some keywords
 author = Arling Vázquez
